--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nextjs-starter",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "author": {
     "name": "Jacob Herper",
     "email": "jacob@herper.io",
